[workspace]
members = [".", "schema"]

[package]
name = "webcord"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/webcord"
homepage = "https://github.com/SOF3/webcord"
readme = "README.md"
description = "Mirrors Discord chat logs on webpages in a searchable fashion"

[dependencies]
actix-rt = "1.0.0-alpha.3" # selected by actix-web
actix-threadpool = "0.3.1"
actix-web = "2.0.0-rc"
config = "0.10.1"
derive-new = "0.5.8"
derive_more = "0.99.2"
diesel = {version = "1.4.3", features = ["postgres", "r2d2", "chrono"]}
dirmod = "0.2.0-alpha.1"
dotenv = "0.15.0"
getset = "0.0.9"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.3.1"
r2d2 = "0.8.8"
rand = "0.7.2"
serde = {version = "1.0.104", features = ["std", "derive"]}
serenity = "0.7.4"
typed-html = "0.2.1"
typemap = "0.3.3"
webcord-schema = {path = "schema"}
