[workspace]
members = [".", "schema"]

[package]
name = "webcord"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/webcord"
homepage = "https://github.com/SOF3/webcord"
readme = "README.md"
description = "Mirrors Discord chat logs on webpages in a searchable fashion"

[dependencies]
actix = "0.9.0"
actix-rt = "1.1.1" # selected by actix-web
actix-session = "0.3.0"
actix-threadpool = "0.3.1"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
chrono = "0.4.11"
config = "0.10.1"
derive-new = "0.5.8"
derive_more = "0.99.5"
diesel = {version = "1.4.4", features = ["postgres", "r2d2", "chrono"]}
dirmod = "0.2.0-alpha.1"
dotenv = "0.15.0"
futures = "0.3.4"
getset = "0.0.9"
hex = "0.4.2"
horrorshow = "0.8.3"
itertools = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.8"
percent-encoding = "2.1.0"
pretty_env_logger = "0.4.0"
r2d2 = "0.8.8"
rand = "0.7.3"
reqwest = {version = "0.10.4", features = ["gzip", "json", "blocking"]}
ring = "0.16.13"
rmp-serde = "0.14.3"
serde = {version = "1.0.110", features = ["std", "derive"]}
serde_iter = "0.1.1"
serde_json = "1.0.52"
serenity = "0.8.6"
typemap = "0.3.3"
webcord-schema = {path = "schema"}

[profile.dev]

[profile.release]
lto = true
