[package]
name = "webcord-schema"
version = "0.0.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/webcord"
homepage = "https://github.com/SOF3/webcord"
readme = "README.md"
description = "Mirrors Discord chat logs on webpages in a searchable fashion"

[dependencies]
chrono = "0.4.11"
derive-new = "0.5.8"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
getset = "0.1.0"
serde = {version = "1.0.106", features = ["std", "derive"]}
